--- a/angular.json
+++ b/angular.json
@@ -20,6 +20,8 @@
             "browser": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
+            "baseHref": "/codemobix/",
+             "outputPath": "dist/codemobix",
             "assets": [
               {
                 "glob": "**/*",
@@ -39,7 +41,7 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
+                  "maximumWarning": "700kB",
                   "maximumError": "1MB"
                 },
                 {
