--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "deploy": "ng build --configuration production --base-href /codemobix/ && npx angular-cli-ghpages --dir=dist/codemobix/browser",
     "test": "ng test"
   },
   "private": true,
