--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "baseHref": "/codemobix/",
-             "outputPath": "dist/codemobix",
+            "outputPath": "dist/codemobix",
             "assets": [
               {
                 "glob": "**/*",
@@ -48,6 +48,12 @@
                   "type": "anyComponentStyle",
                   "maximumWarning": "4kB",
                   "maximumError": "8kB"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
                 }
               ],
               "outputHashing": "all"
