--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,7 @@
             "browser": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "baseHref": "/",
+            "baseHref": "https://codemobix.in",
             "outputPath": "dist/codemobix",
             "assets": [
               {
